<resources>
    <string name="app_name">LocR</string>
    <string name="slogan">Everything your city holds is here</string>

    <!--    String for onBoarding screen-->

    <string name="first_slide_title">Search your Location</string>
    <string name="second_slide_title">Make a call </string>
    <string name="third_slide_title">Add missing places</string>
    <string name="fourth_slide_title">Sit back and enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--    User Dashboard-->
    <string name="featured_location_desc">All the locations that are featured and have the top demand in town</string>
    <string name="most_view">Most Viewed</string>
    <string name="view">View all</string>
    <string name="categories">categories</string>


    <!--    Navigation bar-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_category">All categories</string>
    <string name="add_missing_place">Add missing place</string>
    <string name="login">Log in</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="hotels">Hotels</string>
    <string name="restaurent">Restaurent</string>
    <string name="education">Education</string>
    <string name="shops">Shops</string>


</resources>