<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Common.OnBoarding">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="367dp"
        android:layout_height="554dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_btn"
        android:backgroundTint="#00000000"
        android:textColor="#363636"
        android:onClick="skip"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableEnd="@drawable/skip_icon"
        />
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/letsGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="85dp"
            android:backgroundTint="@color/color_primary"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:onClick="getStarted"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/let_get_started"
            android:textColor="#363636"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/dots"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="140dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:paddingBottom="20dp" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="-287dp"
            android:layout_marginBottom="11dp"
            android:layout_weight="1"
            android:onClick="next"
            android:backgroundTint="#00000000"
            android:drawableEnd="@drawable/next_icon"
            android:stateListAnimator="@null"
            android:text="@string/next_btn"
            android:textColor="#363636"
            android:textSize="16dp" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>