<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    tools:context=".User.UserDashboard">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"
        android:theme="@style/navigationTheme"
         />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="360dp"
            android:layout_height="46dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111">

            <ImageView
                android:id="@+id/three_line_menu"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="0dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/three_line_menu" />

            <ImageView
                android:id="@+id/add_location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"

                android:background="#E5BA73"
                android:padding="10dp"
                android:src="@drawable/add_icon" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingRight="2dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            tools:layout_editor_absoluteX="-2dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/app_name"
                    android:textColor="#363636"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

                <RelativeLayout
                    android:id="@+id/relativeLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_corner"
                    android:backgroundTint="#ccc"
                    android:padding="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        app:srcCompat="@drawable/search_icon" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="seach . . ."
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/hotel_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="#7BDCD0"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/hotel_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bree_serif"
                            android:text="Hotels"
                            android:textAlignment="center" />
                        =
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/restaurent_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="#B9A0FD"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/restaurant_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bree_serif"
                            android:text="Restaurent"
                            android:textAlignment="center" />
                        =
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/education_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="#F39B8B"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/education_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bree_serif"
                            android:text="Education"
                            android:textAlignment="center" />
                        =
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/shops_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:background="@drawable/rounded_corner"
                            android:backgroundTint="#F8CA7C"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/shop_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/bree_serif"
                            android:text="Shops"
                            android:textAlignment="center" />
                        =
                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/relativeLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginTop="10dp"
                    android:background="#DDBD96"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.175">

                    <LinearLayout
                        android:id="@+id/featured_loc_text"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="#DDA35B"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:paddingLeft="10dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="All Featured Locations"
                            android:textAllCaps="true"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/featured_location_desc" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="156dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="0dp"
                        android:layout_toRightOf="@id/featured_loc_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.506"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="115dp"
                        android:fontFamily="@font/aladin"
                        android:text="@string/most_view"
                        android:textAllCaps="true"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/sd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="3dp"
                        android:layout_marginBottom="117dp"
                        android:text="@string/view"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/most_viewed_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_alignParentBottom="true"
                        android:background="#DDBD96" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="117dp"
                        android:fontFamily="@font/aladin"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/view_all_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="3dp"
                        android:layout_marginBottom="117dp"
                        android:text="@string/view"
                        android:textSize="16sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/category_recycler"

                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:gravity="center"
                    android:letterSpacing="0.1"
                    android:text="@string/app_name"
                    android:textColor="#363636"
                    android:textSize="40sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>